<resources>
    <string name="app_name">Modul2XML</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="tip_percentage">Tip Percentage</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="tip_amount_default">Tip Amount: $0.00</string>
    <string name="tip_amount_result">Tip Amount: $%1$s</string>
</resources>